Added Club Peaks page

--- a/app/views/home_meets/clubrelays.html
+++ b/app/views/home_meets/clubrelays.html
@@ -1,6 +1,6 @@
-<div class="clubrelays-page-container">
+<div class="home-meet-page-container">
   <div class="container">
-    <div class="itc-h1">Club Relays</div>
+    <div class="itc-h1">Illinois Club Relays</div>
     <div class="page-content">
       <div class="info">
         <div class="itc-h5"></div>
