updating peaks page

--- a/app/views/home_meets/clubpeaks.html
+++ b/app/views/home_meets/clubpeaks.html
@@ -24,8 +24,8 @@
       </div>
 
       <div class="info">
-        <div class="itc-h5">Tentative Schedule of Events</div>
-        <div>The women’s race of each event will precede the men’s race. The meet will be run on a rolling schedule. Running events will begin at 12:00 PM. Field events will begin at 11:00 AM with Shot Put and Long Jump. Discus will follow Shot Put and Triple Jump will follow Long Jump.</div>
+        <div class="itc-h5">Schedule of Events</div>
+        <div>The women’s race of each event will precede the men’s race. The meet will be run on a rolling schedule. Running events will begin at 12:00 PM. Field events will begin at 12:00 PM with Shot Put and Long Jump. Discus will follow Shot Put and Triple Jump will follow Long Jump.</div>
       </div>
       <div class="meet-schedule">
         <div class="table">
@@ -34,11 +34,11 @@
             <div flex="40">Field Events</div>
           </div>
           <div class="table-row" layout="row">
-            <div flex="40">100m Dash</div>
+            <div flex="40">100/110m Hurdles</div>
             <div flex="40">Long Jump</div>
           </div>
           <div class="table-row" layout="row">
-            <div flex="40">100/110m Hurdles</div>
+            <div flex="40">100 Dash</div>
             <div flex="40">Triple Jump</div>
           </div>
           <div class="table-row" layout="row">
@@ -77,7 +77,7 @@
       </div>
       <div class="info">
         <div class="itc-h5">Scoring</div>
-        <div>Events are scored 10-8-6-5-4-3-2-1, with a max of 3 individuals and only one relay team per school per event scoring. You may enter as many relay teams and athletes as you like. You do not have to declare your scorers in advance. Relay teams must be single-sex.</div>
+        <div>Events are scored 10-8-6-5-4-3-2-1, any number of individuals but only one relay per team can score in each event. You may enter as many relay teams and athletes as you like. You do not have to declare your scorers in advance. Relay teams must be single-sex.</div>
       </div>
 
       <iframe class="map-container" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1526.0613845534313!2d-88.22990045711308!3d40.09497564115151!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x880cd721bc4d1ec3%3A0xb4ed142e02bf41d1!2s1300+St+Marys+Rd%2C+Urbana%2C+IL+61802!5e0!3m2!1sen!2sus!4v1490730972927" frameborder="0" style="border:0" allowfullscreen></iframe>
