--- a/app/views/home_meets/clubpeaks.html
+++ b/app/views/home_meets/clubpeaks.html
@@ -4,7 +4,7 @@
     <div class="page-content">
       <div class="info">
         <div class="itc-h5"></div>
-        <div class="club-large">The first annual Illinois Club Peaks will take place this year on April 29, 2017. Relevant information regarding the meet is below. If you have any further questions, please direct them at our Meet Coordinator, Sean Bruyere, whose contact information is below. </div>
+        <div class="club-large"><strong>UPDATE:</strong> The meet is <strong>still on!</strong> Check our twitter @IlliniTrackClub for updates.<br><br>The first annual Illinois Club Peaks will take place this year on April 29, 2017. Relevant information regarding the meet is below. If you have any further questions, please direct them at our Meet Coordinator, Sean Bruyere, whose contact information is below. </div>
       </div>
 
       <div class="info">
