Post peaks update

--- a/app/views/home_meets/clubpeaks.html
+++ b/app/views/home_meets/clubpeaks.html
@@ -4,7 +4,8 @@
     <div class="page-content">
       <div class="info">
         <div class="itc-h5"></div>
-        <div class="club-large"><strong>UPDATE:</strong> The meet is <strong>still on!</strong> Check our twitter @IlliniTrackClub for updates.<br><br>The first annual Illinois Club Peaks will take place this year on April 29, 2017. Relevant information regarding the meet is below. If you have any further questions, please direct them at our Meet Coordinator, Sean Bruyere, whose contact information is below. </div>
+        <div class="club-large">Thank you to all those who braved the weather and came out to the inaugural Illinois Club Peaks! We hope to see you all and many more come out next year and try to break all of the newly set meet records at the 2018 edition of Illinois Club Peaks!</div>
+        <div class="club-large"><a class="link" target="_blank" href="https://drive.google.com/open?id=0B9IJ7PBOO1nSR2NCMUhpRmI4TW8" analytics-on="click" analytics-event="Viewed club peaks results">2017 Club Peaks Results</a></div>
       </div>
 
       <div class="info">
