--- a/app/styles/utilities/_typography.scss
+++ b/app/styles/utilities/_typography.scss
@@ -86,6 +86,19 @@
   }
 }
 
+.itc-h6 {
+  font-size: 20px;
+  font-weight: 300;
+
+  @media (max-width: $break-sm) {
+    font-size: 18px;
+  }
+
+  @media (max-width: $break-xs) {
+    font-size: 14px;
+  }
+}
+
 .itc-bold {
   font-weight: 700;
 }
