Fix up loading circles on results page

--- a/app/styles/results.scss
+++ b/app/styles/results.scss
@@ -16,6 +16,7 @@
   // Give spinner a little space from table header
   .spinner {
     margin-top: 25px;
+    padding: 10px;
   }
 
   // General table settings for all tables on the results page
