--- a/app/styles/results.scss
+++ b/app/styles/results.scss
@@ -88,7 +88,7 @@
 
   // Athlete search page searchbar
   .searchbar-container {
-    padding-top: 20px;
+    padding: 20px 0;
 
     .searchbar {
       background: $white;
