updating 2018 club relays price and date

--- a/app/views/home_meets/clubrelays.html
+++ b/app/views/home_meets/clubrelays.html
@@ -4,18 +4,18 @@
     <div class="page-content">
       <div class="info">
         <div class="itc-h5"></div>
-        <div class="club-large">A special thanks to the 29 teams and over 700 athletes who made the 2017 Illinois Club Relays yet again the biggest meet ever! Each year this meet gets bigger and more competitive, as proven by the 6 new meet records broken this year. We look forward to seeing all the teams compete next year at the 2018 Illinois Club Relays!</div>
+        <div class="club-large">A special thanks to the 29 teams and over 700 athletes who made the 2017 Illinois Club Relays yet again the biggest meet ever! Each year this meet gets bigger and more competitive, as proven by the 6 new meet records broken this year. We look forward to seeing all the teams compete next year at the 2018 Illinois Club Relays on February 24th, 2018!</div>
         <div class="club-large"><a class="link" target="_blank" href="https://drive.google.com/open?id=0B9IJ7PBOO1nSRkhDUTRLa0xoNUU" analytics-on="click" analytics-event="Viewed club relays results">2017 Club Relays Results</a></div>
       </div>
 
       <div class="info">
         <div class="itc-h5">Registration Info</div>
-        <div>Please contact Sean Bruyere, meet coordinator, at <a class="link" href="mailto:sbruyer2@illinois.edu" analytics-on="click" analytics-event="Clicked to email club relays page coordinator">sbruyer2@illinois.edu</a> or at <a class="link" href="mailto:illinoistfclub+meetcoord@gmail.com" analytics-on="click" analytics-event="Clicked to email club relays page coordinator">illinoistfclub+meetcoord@gmail.com</a></div>
+        <div>Please contact Sean Frintner, meet coordinator, at <a class="link" href="mailto:seanef2@illinois.edu" analytics-on="click" analytics-event="Clicked to email club relays page coordinator">seanef2@illinois.edu</a> or at <a class="link" href="mailto:illinoistfclub+meetcoord@gmail.com" analytics-on="click" analytics-event="Clicked to email club relays page coordinator">illinoistfclub+meetcoord@gmail.com</a></div>
       </div>
 
       <div class="info">
         <div class="itc-h5">Cost</div>
-        <div>$10 per individual event and $20 per relay team (team cap at $200).</div>
+        <div>$10 per individual event and $20 per relay team (team cap at $350).</div>
         <div>Payment is due the day of the meet. Please make checks payable to "Illinois Track and Field Club".</div>
       </div>
 
