--- a/app/views/home_meets/clubpeaks.html
+++ b/app/views/home_meets/clubpeaks.html
@@ -10,7 +10,7 @@
 
       <div class="info">
         <div class="itc-h5">Registration Info</div>
-        <div>Please contact Sean Bruyere, meet coordinator, at <a class="link" href="mailto:seanef2@illinois.edu" analytics-on="click" analytics-event="Clicked to email club relays page coordinator">seanef2@illinois.edu</a> or at <a class="link" href="mailto:illinoistfclub+meetcoord@gmail.com" analytics-on="click" analytics-event="Clicked to email club relays page coordinator">illinoistfclub+meetcoord@gmail.com</a></div>
+        <div>Please contact Sean Frintner, meet coordinator, at <a class="link" href="mailto:seanef2@illinois.edu" analytics-on="click" analytics-event="Clicked to email club relays page coordinator">seanef2@illinois.edu</a> or at <a class="link" href="mailto:illinoistfclub+meetcoord@gmail.com" analytics-on="click" analytics-event="Clicked to email club relays page coordinator">illinoistfclub+meetcoord@gmail.com</a></div>
       </div>
 
       <div class="info">
