fixing_track_address_and_minor_things

--- a/app/views/home_meets/clubpeaks.html
+++ b/app/views/home_meets/clubpeaks.html
@@ -21,7 +21,7 @@
 
       <div class="info">
         <div class="itc-h5">Facility</div>
-        <div>The meet will be held at the University of Illinois Outdoor Track &amp Field Complex (1300 W. St. Mary's Rd, Urbana, Illinois), a 400 meter outdoor track. Spikes are permitted. Bring your own batons! Starting blocks will be provided. Parking is located in the grass area immediately west of Illinois Field, in the Richard T. Ubben Basketball Complex or at the Bielfeldt Athletic Administration Building. In case of inclement weather additional parking is usually available in the State Farm Center East Quadrants. Handicap parking spots are located within this allotment at any of the locations listed. </div>
+        <div>The meet will be held at the University of Illinois Outdoor Track &amp Field Complex (602 St. Mary's Rd. Champaign, Illinois), a 400 meter outdoor track. Spikes are permitted. Bring your own batons! Starting blocks will be provided. Parking is located in the grass area immediately west of Illinois Field, in the Richard T. Ubben Basketball Complex or at the Bielfeldt Athletic Administration Building. In case of inclement weather additional parking is usually available in the State Farm Center East Quadrants. Handicap parking spots are located within this allotment at any of the locations listed. </div>
       </div>
 
       <div class="info">
