Adding FAQs to Prospective members

--- a/app/views/prospective_members.html
+++ b/app/views/prospective_members.html
@@ -15,6 +15,15 @@
       <div>Furthermore, we are a completely student run organization at University of Illinois. The leaders of our club are elected by the members of the team at the end of each season. As a member of the club, you have the opportunity to demonstrate passion and make important decisions on the club by becoming a leader as early as your sophomore year. If you are looking to foster your own leadership ability while continuing to do what you love, then ITC/IXC is perfect for you.</div>
     </div>
     <div class="faq-question">
+      <div class="itc-h5">How/when do we train?</div>
+      <div>IFor cross country, training plans are written by the coach and gender minority captain. They take into account varying ability levels and busy schedules. In track and cross country, distance meets every weekday at 4:15 PM and on Sunday mornings for long runs at the west side of the Armory (by the flagpole). Sprinters and throwers usually meet weekdays at 6 PM at the Armory. During the winter, everyone meets at 10 PM at the Armory on Tuesdays.</div>
+    </div>
+    <div class="faq-question">
+      <div class="itc-h5">What is the cost?</div>
+      <div>There is a fee to be a member of the club, typically $20. Each meet usually costs $10-$15. We pride ourselves on having financial transperancy and keeping costs to a minimum.  
+</div>
+    </div>
+      <div class="faq-question">
       <div class="itc-h5">What are the next steps? - Contact us!</div>
       <div>If you are planning to attend the University of Illinois at Urbana-Champaign and you are not quite ready to be finished with your running career, we invite you come and see what we&rsquo;re all about. If you would like more information about our club, please send us an email! If you would like more information about NIRCA and club running as a whole, please visit clubrunning.org</div>
       <div>If you are attending another university and are not joining the varsity team, we would also encourage you to check out their specific club team. There are many other great clubs out there! Your running career does not have to end with high school.</div>
