fixing_parking_for_club_relays

--- a/app/views/home_meets/clubrelays.html
+++ b/app/views/home_meets/clubrelays.html
@@ -22,7 +22,18 @@
 
       <div class="info">
         <div class="itc-h5">Facility</div>
-        <div>The meet will be held at the University of Illinois Armory (505 East Armory Avenue, Champaign, IL 61820), a 200 meter indoor track. Spikes are permitted. Batons and starting blocks will be provided. Parking will be available at Huff Hall (directly south of the Armory).</div>
+        <div>The meet will be held at the University of Illinois Armory (505 East Armory Avenue, Champaign, IL 61820), a 200 meter indoor track. Spikes are permitted. Batons and starting blocks will be provided. <div> <div> After 5pm and
+        on weekends, with the exception of lots or spaces labeled as enforced 24/7, there are no
+        parking restrictions for University lots or spaces. Private parking is enforced as posted. City of
+        Champaign meters are enforced as posted.<div> <div> 
+        Parking is available near the Armory in lot C9 to the north; *NOT* E12 directly to the south (There is an event at Huff Hall on 2/24) ; E18, E19, and E15 3 blocks to the south; and E2 4 blocks to the
+        southeast. Street parking is available on 4th street to the west (City of Champaign meters
+        enforced 7am ‐ 9pm Mon ‐ Sat), 6th street to the east, and Peabody & Pennsylvania to the
+        south. <div> <div> 
+        There is plenty of parking for Armory events within 3‐4 blocks.
+        Team buses shall drop off and pick up athletes on 4th Street or Armory Ave. Buses should park
+        in lot E15 at the corner of 4th St. & Pennsylvania Ave. Team buses should not drop off or pick up
+        on Gregory Ave. on the south side of the Armory building..</div>
       </div>
 
       <div class="info">
