fixing team cap to 350 and mile

--- a/app/views/home_meets/clubpeaks.html
+++ b/app/views/home_meets/clubpeaks.html
@@ -15,7 +15,7 @@
 
       <div class="info">
         <div class="itc-h5">Cost</div>
-        <div>$10 per individual event and $20 per relay team (team cap at $300).</div>
+        <div>$10 per individual event and $20 per relay team (team cap at $350).</div>
         <div>Payment is due the day of the meet. Please make checks payable to "Illinois Track and Field Club".</div>
       </div>
 
@@ -67,7 +67,7 @@
             <div flex="50"></div>
           </div>
           <div class="table-row" layout="row">
-            <div flex="50">1500m Run</div>
+            <div flex="50">Mile Run</div>
             <div flex="50"></div>
           </div>
           <div class="table-row" layout="row">
