fixing time schedule

--- a/app/views/home_meets/clubpeaks.html
+++ b/app/views/home_meets/clubpeaks.html
@@ -26,7 +26,7 @@
 
       <div class="info">
         <div class="itc-h5">Schedule of Events</div>
-        <div>The women’s race of each event will precede the men’s race. The meet will be run on a rolling schedule. Running events will begin at 12:00 PM. Field events will begin at 12:00 PM with Shot Put and Long Jump. Discus will follow Shot Put and Triple Jump will follow Long Jump.</div>
+        <div>The women’s race of each event will precede the men’s race. The meet will *not* be run on a rolling schedule. Running events will begin at 2:00 PM. Field events will begin at 2:00 PM with Shot Put and Long Jump. Discus will follow Shot Put and Triple Jump will follow Long Jump.</div>
       </div>
       <div class="meet-schedule">
         <div class="table">
